k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api
  namespace: diploma-demo
  labels:
    app: book-api
spec:
  replicas: 2
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: book-api
  template:
    metadata:
      labels:
        app: book-api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: book-api
          image: ghcr.io/kiril-iliyanov-kirilov/book-api:actuator-fix-v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            # app start ~50-60s при теб, затова по-щадящо:
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 18
            # общо ~200s толеранс (20 + 18*10)

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
            successThreshold: 1

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
