k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-api
  namespace: diploma-demo
spec:
  selector:
    app: book-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
