k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-api-ingress
  namespace: diploma-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: book-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-api
                port:
                  number: 80
